[B]0.9.28[/B]
DIALOGVIDEOINFO - Fix for trailer button (hopefully)
DIALOGSELECT - Fix for weird multilines
PVR - Hopefully fix artwork and info overlap issues
LEIA - Return of Alphabet Strip
LEIA - Minimalist subtitles button by default (option to toggle in SkinSettings)
LEIA - Add subtitles settings button in osd settings cog menu.

[B]0.9.27[/B]
SKINSHORTCUTS Fix enable / disable code when in skinshortcuts and adding item
WIDGETS Add checks for playlists ending with name Genres.xsp, Studios.xsp, Countries.xsp etc

[B]0.9.26[/B]
VIEWTYPES - Fix for Big Posters with Codec Info on
WIDGETS - Fix busy spinner for mouse mode
VIDEOINFO - Make subtitles and audio language distinction clearer
VIDEOINFO - Add duration to extras
SKINSHORTCUTS - Add Enable/Disable toggle

[B]0.9.25[/B]
VIEWTYPES - Add Square Wall Large
MYPLAYLIST - Adapt side poster/cover depending on listitem dbtype
SKINSETTINGS - Move Monochrome flags option to Colors menu
HOME - Add focus bump when pressing up from submenu and categories widget disabled
SKINSETTINGS/MISCELLANEOUS - Force extendedinfo to open when pressing info
WIDGETS - Add top250 number for top250 widgets
RATINGS - Disable votes by default. Option to re-enable in Skin Settings.

[B]0.9.24[/B]
LEIA - VIDEOOSD - Subtitles button opens subtitles menu
DIALOGSUBTITLES - Fix filename length and scroll
SKINSETTINGS/LIBRARY - Show media flags instead of ratings
SKINSETTINGS/LIBRARY - Monochrome flags
PLAYLIST - Add braz's playlist code
DIALOGADDONINFO - Change Enable/Disable text to Enabled/Disabled to match icons

[B]0.9.23[/B]
Fix musicplaylist

[B]0.9.22[/B]
New icons added
Widget code changes
Add sort letter on scrolling
Add page and item numbers on scrollbar
Add uninstall icon in addon info
Fix missing album cover icon
Fix scrollbar ids for non library views

[B]0.9.21[/B]
Fix musicvideo info
HDR Flag
Option to disable pressing up from menu
Keyboard improvements (thanks loggio!)

[B]0.9.20[/B]
LEIA - Fix for artwork helper on home screen