@@ -595,6 +595,7 @@
                             <label>$LOCALIZE[31026]</label>
                             <selected>Skin.HasSetting(AlphabetStrip)</selected>
                             <onclick>Skin.ToggleSetting(AlphabetStrip)</onclick>
+                            <enable>System.HasAddon(script.skin.helper.service)</enable>
                         </control>
                         
                         <control type="button" id="9613" description="Startup Video">
