@@ -1,9 +1,8 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<addon id="skin.aura" version="0.9.28" name="Aura" provider-name="jurialmunkey">
+<addon id="skin.aura" version="0.9.29" name="Aura" provider-name="jurialmunkey">
     <requires>
         <import addon="xbmc.gui" version="5.13.0"/>
         <import addon="script.skinshortcuts" version="0.4.0"/>
-        <import addon="script.skin.helper.service" version="1.1.0"/>
         <import addon="script.extendedinfo" version="3.0.0"/>
         <import addon="script.image.resource.select" version="0.0.5"/>
         <import addon="plugin.program.autocompletion" version="1.0.1"/>
