@@ -1,3 +1,7 @@
+[B]0.9.29[/B]
+REMOVE - Skin Helper as Dependency (Now optional install)
+SKIN HELPER - Add some checks that it is installed before using.
+
 [B]0.9.28[/B]
 DIALOGVIDEOINFO - Fix for trailer button (hopefully)
 DIALOGSELECT - Fix for weird multilines
